--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ body {
     margin: 10px 10px 10px;
     width: 80%;
     height: 200px;
-    padding: 10px;
+    padding: 10px 10px 10px 10px;
     border-radius:4px;
     box-shadow: 1px 1px 2px #333333;
     background: #cccccc; 
