--- a/src/style.css
+++ b/src/style.css
@@ -1,40 +1,31 @@
-header {
-    margin: 10% auto;
-    font-family: 'Roboto', sans-serif;
-    font-size: 22px;
-    font-weight: 300;
-    color: rgb(63, 63, 63);
-    text-align: center;
-
+* {
+    margin: 0;
+    padding: 0;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 22px;
-    font-weight: 300;
     color: rgb(63, 63, 63);
-    background-image: url("/src/images/background1.png");
-
- }
-
-.container{
-
-  display: flex;
-  width: 80% ;
-  height: auto  ;
-  margin: 15px auto;
-  padding: 10px;
-  text-align: center;
-
-
 }
+
+header {
+    margin: 10% auto;
+    text-align: center;
+}
+
+.container {
+    display: flex;
+    justify-content: space-around;
+    width: 80%;
+    margin: auto;
+    text-align: center;
+}
+
 .box {
-    position:static;
-    visibility: hidden;
-    width: 325px;
-    height: auto;
-    margin: 10px;
-    padding: 15px 15px 15px 15px;
+    width: 20rem;
+    margin: 5%;
+    padding: 0.8rem;
     background: rgba(240, 234, 234, 0.500);
     border-radius: 4px 4px 0 0;
     text-align: center;
@@ -42,16 +33,15 @@ body {
 }
 
 .box_text {
-  display: block;
+    display: block;
     margin: 10px 10px 10px;
     width: 80%;
     height: 200px;
-    padding: 20px ;
-    border-radius:4px;
+    padding: 20px;
+    border-radius: 4px;
     box-shadow: 1px 1px 2px #333333;
     background: #cccccc;
-    border:1px solid #000000;
-
+    border: 1px solid #000000;
 }
 
 .key_box {
@@ -60,58 +50,31 @@ body {
     padding: 3px;
     background: #cccccc;
     font-size: 22px;
-    border-radius:4px;
-    border:1px solid #000000;
+    border-radius: 4px;
+    border: 1px solid #000000;
     box-shadow: 1px 1px 2px #333333;
- }
+}
 
 .button {
-     width: 100px;
-    height: 32px;
+    width: auto;
+    height: auto;
     padding: 3px;
-     margin-top: 12px;
+    margin-top: 12px;
     background: #48c8d179;
     font-size: 22px;
     color: rgb(63, 63, 63);
     border-radius: 4px;
-    border:1px solid #000000;
+    border: 1px solid #000000;
     box-shadow: 1px 1px 2px #333333;
 }
 
 .decision_button {
-    width: auto  ;
-    height: auto;
-    margin:auto;
-    display: inline-block;
-
     padding: 20px;
-    background: #48c8d179;
     font-size: 32px;
-    color: rgb(63, 63, 63);
-    border-radius: 4px;
-    border:1px solid #000000;
     box-shadow: 5px 5px 7px #333333;
 }
-#decision {
-    position: center;
-    display: flex;
-    width: 50% ;
-    height: auto  ;
-    margin: 0 auto;
-    padding: 20px;
-    background: rgba(240, 234, 234, 0.281);
-    text-align: center;
-}
 
-
-#result_cipher {
+.result {
     display: block;
-
-
-     visibility: hidden;
- }
-
-#result_deciphering {
-  display: block;
-  visibility: hidden;
-  }
+    visibility: hidden;
+}
